# dbt-duckdb-preppin-data

./: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
databases/: pd.duckdb  sandbox.duckdb
models/0__Input/pd_2023/: 2023__week_1__pd_2023_wk_1_input.py  _2023__week_1__pd_2023_wk_1_input.yml
models/0__Input/pd_2024/: 2024__week_1__pd_2024_wk_1_input.py  _2024__week_1__pd_2024_wk_1_input.yml
models/pd__2023/: _pd__2023__week_1__input.yml  _pd__2023__week_1__intermediate.yml  _pd__2023__week_1__output_1.yml  _pd__2023__week_1__output_2.yml  _pd__2023__week_1__output_3.yml  _pd__2023__week_2__input_1.yml  _pd__2023__week_2__input_2.yml  _pd__2023__week_2__intermediate.yml  _pd__2023__week_2__output.yml  pd__2023__week_1__input.py  pd__2023__week_1__intermediate.sql  pd__2023__week_1__output_1.sql  pd__2023__week_1__output_2.sql  pd__2023__week_1__output_3.sql  pd__2023__week_2__input_1.py  pd__2023__week_2__input_2.py  pd__2023__week_2__intermediate.sql  pd__2023__week_2__output.sql
models/pd__2024/: _pd__2024__week_1__input.yml  _pd__2024__week_1__intermediate.yml  _pd__2024__week_1__output_1.yml  _pd__2024__week_1__output_2.yml  pd__2024__week_1__input.py  pd__2024__week_1__intermediate.sql  pd__2024__week_1__output_1.sql  pd__2024__week_1__output_2.sql
seeds/pd_2023/: _2023__week_1__pd_2023_wk_1_input.yml
seeds/pd_2024/: _2024__week_1__pd_2024_wk_1_input.yml
seeds/pd_2025/: 2025__challenge_1__input_1.csv  2025__challenge_1__input_2.csv  _2025__challenge_1__input_1.yml  _2025__challenge_1__input_2.yml
(+18 files in other folders)
